V1.XX.X

V1.14.1
[QMS-37] Inconsistent use of time zones
[QMS-43] Individual filter for each project
[QMS-49] Add "elevation limit" to DEM to highlight elevation above the limit
[QMS-58] Windows Build and Installer: use PROJ 6.2
[QMS-59] Version information in window title does not contain VERSION_SUFFIX "development"
[QMS-64] Cleanup code in IUnit and subclasses
[QMS-73] Info of a geocache is not correctly shown in Copy Element Window
[QMS-79] Possibility to 'star' Waypoints
[QMS-80] Use ASAN to enhance code quality
[QMS-83] Application Crash
[QMS-89] Geo search hidden after restarting QMapShack
[QMS-100] Avoid whitespaces in project name and keywords
[QMS-108] Integrate Wiki Page as help dialog
[QMS-109] Direct link to geocaching logging page
[QMS-111] Geocaching logging page - only 1 server used
[QMS-116] Filter edit field lost
[QMS-118] Too much whitespace in extended search help window
[QMS-119] Better handling of disabled and archived geocaches
[QMS-125] Missing icon for not available geocache
[QMS-126] Wrong results searching for geocache status
[QMS-122] Windows: support for offline help

V1.14.0
[QMS-5] App crashes on using the "Change Start Point" filter
[QMS-6] Enhance overview detection for VRT maps
[QMS-8] Incorrect elevation for fit files from GPSMAP 66s
[QMS-12] Unify versions of all QMapShack tools
[QMS-13] Add support for Garmin Edge 500
[QMS-14] Drawing track: Alternate mode O A V T with a simple key with no modifiers
[QMS-18] Improved explanation of 'Date equals'
[QMS-19] Invalid GPX due to `::` in `ql` namespace
[QMS-20] Windows Start Menu - change links from bitbucket to github
[QMS-22] Aviation units: nm for distances and feet for altitude
[QMS-27] Error in workspace search for attributes
[QMS-31] Fix all links to Bitbucket in the code
[QMS-53] Unload Garmin `Archive` when folder is deflated
[QMS-54] Invalid point cannot be deactivated when tracks are read from the navigation device

