@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>653</width>
+    <width>734</width>
     <height>46</height>
    </rect>
   </property>
@@ -302,6 +302,13 @@
          </widget>
         </item>
        </layout>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushOptimize">
+       <property name="text">
+        <string>Optimize</string>
+       </property>
       </widget>
      </item>
      <item>
